--- a/chaincode/package.json
+++ b/chaincode/package.json
@@ -16,29 +16,29 @@
         "build": "tsc",
         "build:watch": "tsc -w",
         "prepublishOnly": "npm run build",
-"nvm": "~/.nvm/nvm-exec which node | xargs -J % ln -sf % ./.nvm-node && chmod +x ./.nvm-node"
+        "nvm": "~/.nvm/nvm-exec which node | xargs -J % ln -sf % ./.nvm-node && chmod +x ./.nvm-node"
     },
     "engineStrict": true,
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
-        "fabric-contract-api": "~1.4.0",
-        "fabric-shim": "~1.4.0"
+        "fabric-contract-api": "^1.4.5",
+        "fabric-shim": "^1.4.5"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.7",
+        "@types/chai": "^4.2.11",
         "@types/mocha": "^5.2.5",
-        "@types/node": "^10.12.10",
+        "@types/node": "^10.17.18",
         "@types/sinon": "^5.0.7",
-        "@types/sinon-chai": "^3.2.1",
+        "@types/sinon-chai": "^3.2.4",
         "chai": "^4.2.0",
-        "mocha": "^5.2.0",
-        "nyc": "^13.1.0",
+        "mocha": "^6.2.3",
+        "nyc": "^15.0.1",
         "sinon": "^7.1.1",
-        "sinon-chai": "^3.3.0",
+        "sinon-chai": "^3.5.0",
         "ts-node": "^7.0.1",
-        "tslint": "^5.11.0",
-        "typescript": "^3.1.6"
+        "tslint": "^5.20.1",
+        "typescript": "^3.8.3"
     },
     "nyc": {
         "extension": [
